# ft_transcendance

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
scripts/: count_modules.py
services/api/: README.md  docker-compose.yml
services/backend/: README.md  docker-compose.yml
services/backend/website/: Dockerfile  docker-compose.yml  flake.nix  manage.py  pyproject.toml
services/backend/website-service/: docker-compose.yml  flake.nix  pyproject.toml
services/backend/website-service/website-service/: main.py
services/backend/website/website/: settings.py
services/frontend/: index.html
services/monitoring/elk/: docker-compose.yml
services/monitoring/prometheus/: docker-compose.yml
services/monitoring/prometheus/config/: prometheus.yml
services/nginx/: Dockerfile  docker-compose.yml  modsec.conf  nginx.conf
services/nginx/config/: nginx.conf
services/vault/: docker-compose.yml
services/vault/config/: config.hcl
services/website/: .dockerignore  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml  run.sh  shell.nix
services/website/frontend/: .dockerignore  Dockerfile  README.md  deps.js  flake.nix  index.html  index.js  package.json  pnpm-lock.yaml  rsbuild.config.mjs  shell.nix  tailwind.config.js  vite.config.js
services/website/frontend/login/: index.html  login.js  styles.css
services/website/frontend/src/: index.css  index.html  index.js  pong.css  pong.html  shared.css  shared.js  theme.js
services/website/website-service/: decorators.py  main.py
(+13 files in other folders)
